# python-resume

./: .gitignore  Makefile  README.md  api-creds.json.example  get_lnkd_workhistory.py  header.mustache  position.mustache  requirements.txt  resume.json  setup.cfg  setup.py  tox.ini
resume/: .schema.json.swp  resume.json  schema.json
templates/: experience.mustache  header.mustache  headshot.mustache  honor.mustache  honorsawards.mustache  objective.mustache  position.mustache  project.mustache  projects.mustache
