[metadata]

# package name / info
name = mattjoyce-resume
summary = resume of matt joyce
description-file =
    README.md

# author info
author = Matt Joyce
author-email = matt@surly.bike
home-page = http://surly.bike/

# classifiers are a pypi thing, but worth having
classifier =
    Environment :: SE
    Intended Audience :: Information Technology
    Intended Audience :: DevOps
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

#  Specifies that a pure-python wheel is "universal" python2 / 3 compat
[wheel]
universal = 1

# pbr config
[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
